--- a/demo2.html
+++ b/demo2.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
 <head>
+    <!-- mqtt-js -->
     <script src="https://blocklypro.webduino.io/dist/lib/webduino-all-0.4.20.min.js"></script>
     <script src="https://blocklypro.webduino.io/node_modules/webduino-module-mqtt/mqttClient.min.js"></script>
-    <script type="module" src="./wa-mqtt.js"></script>
+    <script type="module" src="https://marty5499.github.io/lit/build/wa-mqtt.js"></script>
 </head>
 
 <body>
@@ -13,7 +14,7 @@
 <script>
     var i=0;
     btn.addEventListener('click',()=>{
-        mqtt.publish('zzz',++i+'');
+        mqtt.publish('zzz',++i);
     })
 </script>
 </body>
