--- a/index.html
+++ b/index.html
@@ -74,8 +74,6 @@
         <span slot="title">IoT 儀錶板</span>
     </mwc-top-app-bar-fixed>
 
-    <wa-mqtt></wa-mqtt>
-
     <mwc-tab-bar id='tab'>
         <mwc-tab label="Office" icon="group_work"></mwc-tab>
         <mwc-tab label="home" icon="home"></mwc-tab>
@@ -87,21 +85,26 @@
                 <h1>智慧控制</h1>
             </div>
             <div class="light">
-                <google-gauge id='a' name='光度計' value='30' width='320'></google-gauge>
+                <wa-mqtt sub='gg' set='gg.value'></wa-mqtt>
+                <google-gauge id='gg' name='光度計' value='30' width='320'></google-gauge>
             </div>
             <div class="sw1">
+                <wa-mqtt pub='sw' get='sw1.checked'></wa-mqtt>
                 <mwc-switch id='sw1'></mwc-switch> 彩燈
             </div>
             <div class="sw2">
-                <mwc-switch id='sw2'></mwc-switch> 警報
+                <wa-mqtt pub='alarm' get='sw2.checked'></wa-mqtt>
+                <mwc-switch id='sw2'></mwc-switch> 音樂
             </div>
+                <wa-mqtt pub='light' get='sw3.checked'></wa-mqtt>
             <div class="sw3">
-                <mwc-switch id='sw1'></mwc-switch> 電燈
+                <mwc-switch id='sw3'></mwc-switch> 電燈
             </div>
         </div>
     </div>
     <div class="tab-container">
-        <div class="container">
+        <button onclick='js:cc.show()'>WebRTC</button>
+        <div class="container">            
             <web-rtc id='cc'></web-rtc>
         </div>
     </div>
